basic display and find option in deckbuilder

--- a/client/templates/game/game.html
+++ b/client/templates/game/game.html
@@ -1,14 +1,4 @@
-<head>
-  <title>simple</title>
-</head>
-
-<body>
-<div class="container">
-  {{>cardBoard}}
-</div>
-</body>
-
-<template name="cardBoard">
+<template name="game">
   <div class="row">
     <div class="opponent">
       {{>opponentBoard}}
