--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,6 @@
 .card{
-  background: url('img/back.jpg');
+  /*background: url('img/back.jpg');*/
+  background:black;
   width:150px;
   height:208px;
   margin:1em;
