--- a/client/templates/deckbuilder/deckbuilder.html
+++ b/client/templates/deckbuilder/deckbuilder.html
@@ -16,7 +16,7 @@
 
   {{#if decklist}}
     {{#each decklist.list}}
-      {{>card small='true'}}
+      {{>card data=card small='true'}}
     {{/each}}
   {{/if}}
 </template>
