--- a/client/templates/game/common/hand/hand.html
+++ b/client/templates/game/common/hand/hand.html
@@ -1,7 +1,7 @@
 <template name="hand">
   <div class="hand pull-left">
     {{#each hand}}
-      {{>card id=id}}
+      {{>card data=card id=id}}
     {{/each}}
   </div>
 </template>
