--- a/client/templates/game/common/card/card.html
+++ b/client/templates/game/common/card/card.html
@@ -6,7 +6,7 @@
   {{else}}
     <div id="{{data._id}}" class="card pull-left {{rotate data._id}}">
       {{data.name}}
-      <img class="card-small" src="{{data.image}}">
+      <!--<img class="card-small" src="{{data.image}}">-->
     </div>
   {{/if}}
 
