--- a/client/templates/game/game.html
+++ b/client/templates/game/game.html
@@ -16,6 +16,7 @@
       </div>
       <div class="">
         <button class="btn btn-info deal">Deal</button>
+        <button class="btn btn-info draw">Draw</button>
       </div>
     </div>
   </div>
