--- a/client/templates/game/common/card/card.html
+++ b/client/templates/game/common/card/card.html
@@ -7,7 +7,7 @@
   {{else}}
     <div id="{{data._id}}" class="card {{rotate data._id}}">
       <p class="">{{data.name}} x {{quantity}}</p>
-      <!--<img class="card-small" src="{{data.image}}">-->
+      <img class="card-small" src="{{data.image}}">
     </div>
   {{/if}}
 
