--- a/client/templates/layout/layout.html
+++ b/client/templates/layout/layout.html
@@ -1,3 +1,5 @@
 <template name="layout">
-  {{> Template.dynamic template=content}}
+  <div class="container-fluid">
+    {{> Template.dynamic template=content}}
+  </div>
 </template>
