wip on making cache queries and add to deck make sense

--- a/client/templates/deckbuilder/deckbuilder.html
+++ b/client/templates/deckbuilder/deckbuilder.html
@@ -21,7 +21,7 @@
         {{#each result}}
           <div class="result">
             <img src="{{image_url}}">
-            <button class="btn btn-success add">Add</button>
+            <button id="{{multiverse_id}}" class="btn btn-success add">Add</button>
           </div>
         {{/each}}
       {{/if}}
