--- a/client/templates/layout/layout.html
+++ b/client/templates/layout/layout.html
@@ -1,5 +1,15 @@
 <template name="layout">
   <div class="container-fluid">
+    <nav>
+      <ul>
+        <li>
+          <a href="/game">Game</a>
+        </li>
+        <li>
+          <a href="/deckbuilder">Deckbuilder</a>
+        </li>
+      </ul>
+    </nav>
     {{> Template.dynamic template=content}}
   </div>
 </template>
